Closed Bug 598078 Opened 14 years ago Closed 14 years ago

DocShell warning: Could not fetch previous flags, URI will be treated like referrer

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: stechz, Assigned: stechz)

Details

Attachments

(1 file)

Warning is bogus. It warns if NS_FAILED is false, meaning the call was actually successful.
Attached patch Fix warningSplinter Review
Attachment #476845 - Flags: review?(bzbarsky)
Comment on attachment 476845 [details] [diff] [review]
Fix warning

Er, yes.  ;)
Attachment #476845 - Flags: review?(bzbarsky) → review+
Whiteboard: [needs landing]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: