Bug 598078 - DocShell warning: Could not fetch previous flags, URI will be treated like referrer. r=bz, a=warning